# color-tiles-rl

./: .gitignore  README.md  WSL_GUI_SETUP.md  main.py  pyproject.toml
checkpoints/eval_logs/: evaluations.npz
docs/: game_rule.md  reinforce_learning_plan.md
examples/: cli_demo.py
logs/tensorboard/PPO_1/: events.out.tfevents.1765101905.maple-island.18918.0
logs/tensorboard/PPO_2/: events.out.tfevents.1765101947.maple-island.19097.0
src/color_tiles/: __init__.py
src/color_tiles/domain/: __init__.py  constants.py  exceptions.py  models.py
src/color_tiles/engine/: __init__.py  board.py  game.py  move_validator.py  tile_finder.py
src/color_tiles/gui/: __init__.py  ai_control_panel.py  ai_status_panel.py  board_widget.py  control_panel.py  info_panel.py  info_panel_en.py  main_window.py
src/color_tiles/utils/: __init__.py  board_generator.py
src/rl/: __init__.py
src/rl/inference/: __init__.py  ai_player.py
src/rl/training/: __init__.py  callbacks.py  train.py
tests/: test_color_tiles_env.py
