[project]
name = "color-tiles"
version = "0.1.0"
description = "Color Tiles puzzle game with PyQt6 GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
color-tiles = "main:main"
color-tiles-cli = "examples.cli_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/color_tiles"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
